k8s/development-remote/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-hub-nats-flapi-ingress
  namespace: dev-hub-nats-flapi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    #nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    #nginx.ingress.kubernetes.io/auth-secret: dev-nats-auth-secret
    #nginx.ingress.kubernetes.io/auth-type: basic
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - dev.hub-nats.flapi.org
      - dev.hub-nats-ws.flapi.org
      secretName: letsencrypt-production
  rules:
    - host: dev.hub-nats.flapi.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dev-hub-nats-flapi-service
                port:
                  number: 8222
    - host: dev.hub-nats-ws.flapi.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dev-hub-nats-flapi-service
                port:
                  number: 443
